Fix styling for chevron alignment

--- a/quartz/components/styles/explorer.scss
+++ b/quartz/components/styles/explorer.scss
@@ -151,8 +151,9 @@ button.desktop-explorer {
 }
 
 .folder-container {
-  flex-direction: row;
-  display: flex;
+  display: grid;
+  grid-template-columns: 18px 1fr;
+  column-gap: 0;
   align-items: center;
   user-select: none;
 
@@ -205,7 +206,7 @@ button.desktop-explorer {
 li:has(> .folder-outer > .content:empty)
   > .folder-container
   > .folder-icon {
-  display: none;
+  visibility: hidden;
 }
 
 li:has(> .folder-outer:not(.open)) > .folder-container > svg {
